# Simple-snipeIT

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
locale/fr/LC_MESSAGES/: django.po
simpleSnipeIT/: asgi.py  settings.py  urls.py  wsgi.py
userCheckIO/: admin.py  apps.py  decorators.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
userCheckIO/migrations/: 0001_initial.py
userCheckIO/templates/: asset_list.html  assign_asset.html  base.html  configure_asset_categories.html  filtered_asset_list.html  index.html  login.html  unassign_asset_by_tag.html
