[tool.poetry]
name = "simple-snipeit"
version = "0.1.0"
description = ""
authors = ["Brouzuf <brouzuf@gmail.com>"]
readme = "README.md"
packages = [{include = "simple_snipeit"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.1"
requests = "^2.31.0" # Added requests


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
